addKarte Vereinfacht